New dependencies: Volley, GSON; New menu item: Refresh Data

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -16,4 +16,9 @@
         android:title="League Table"
         app:showAsAction="always"
         android:icon="@drawable/ic_table"/>
+    <item
+        android:id="@+id/refreshData_item"
+        android:title="Refresh Data"
+        app:showAsAction="always"
+        android:icon="@drawable/ic_refresh_data"/>
 </menu>
