--- a/app/src/main/res/layout/list_match_model.xml
+++ b/app/src/main/res/layout/list_match_model.xml
@@ -7,13 +7,14 @@
 
     <TextView
         android:id="@+id/listTextView1"
-        android:layout_width="124dp"
-        android:layout_height="80dp"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:gravity="center"
         android:textAlignment="center"
-        android:textSize="36sp"
+        android:textColor="@android:color/black"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -21,13 +22,14 @@
     <TextView
         android:id="@+id/listTextView2"
         android:layout_width="0dp"
-        android:layout_height="36dp"
+        android:layout_height="25dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:gravity="center"
         android:textAlignment="center"
-        android:textSize="20sp"
+        android:textColor="@android:color/black"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/listTextView1"
         app:layout_constraintTop_toTopOf="parent" />
@@ -35,13 +37,13 @@
     <TextView
         android:id="@+id/listTextView3"
         android:layout_width="0dp"
-        android:layout_height="36dp"
+        android:layout_height="25dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:gravity="center"
         android:textAlignment="center"
-        android:textSize="20sp"
+        android:textColor="@android:color/black"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/listTextView1"
