--- a/app/src/main/res/layout/activity_bet.xml
+++ b/app/src/main/res/layout/activity_bet.xml
@@ -89,6 +89,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:orientation="horizontal"
+        android:checkedButton="@id/bet_radioButton2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
