--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -10,16 +10,49 @@
         android:id="@+id/calendarView"
         android:layout_width="410dp"
         android:layout_height="384dp"
+        android:dateTextAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:firstDayOfWeek="2"
+        android:minDate="01/01/2020"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
+    <HorizontalScrollView
+        android:id="@+id/horizontal_view"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="316dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="0dp">
+
+        <RelativeLayout
+            android:id="@+id/RelativeLayout1"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_gravity="center"
+            android:orientation="vertical">
+
+            <TableLayout
+                android:id="@+id/calendar_table"
+                android:layout_width="wrap_content"
+
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp">
+
+            </TableLayout>
+        </RelativeLayout>
+    </HorizontalScrollView>
+
     <TextView
-        android:id="@+id/testmatch"
-        android:layout_width="286dp"
-        android:layout_height="41dp"
-        android:layout_marginEnd="60dp"
-        android:layout_marginBottom="224dp"
+        android:id="@+id/textView4"
+        android:layout_width="219dp"
+        android:layout_height="26dp"
+        android:layout_marginEnd="96dp"
+        android:layout_marginBottom="188dp"
+        android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
