--- a/app/src/main/res/layout/activity_topscorers.xml
+++ b/app/src/main/res/layout/activity_topscorers.xml
@@ -1,32 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <HorizontalScrollView
-        android:id="@+id/horizontal_view"
-        android:layout_width="fill_parent"
+
+
+    <TableLayout
+        android:id="@+id/topScorers_table"
+
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:ignore="MissingConstraints">
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp">
 
-        <RelativeLayout
-            android:id="@+id/RelativeLayout1"
-            android:layout_width="fill_parent"
-            android:layout_gravity="center"
-            android:layout_height="fill_parent"
-            android:orientation="vertical" >
+    </TableLayout>
 
-            <TableLayout
-                android:id="@+id/topScorers_table"
-                android:layout_margin="10dp"
 
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true" >
-
-            </TableLayout>
-        </RelativeLayout>
-    </HorizontalScrollView>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
