--- a/app/src/main/res/layout/activity_topscorers.xml
+++ b/app/src/main/res/layout/activity_topscorers.xml
@@ -16,7 +16,7 @@
         android:layout_weight="1">
             <TableLayout
                 android:id="@+id/topScorers_table"
-
+                android:layout_gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
